Removed action drop-down submenu right alignment for RTL scripts. Fixes #9651.
svn path=/plonetheme.sunburst/trunk/; revision=33794

--- a/plonetheme/sunburst/skins/sunburst_styles/RTL.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/RTL.css
@@ -70,6 +70,10 @@
     margin: auto;
 }
 
+#contentActionMenus dl.actionMenu.activated dd {
+    right: auto;
+}
+
 dl.actionMenu.activated {
     direction: ltr;
 }
